<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/instructMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruc_move" />

    <TextView
        android:id="@+id/instructBombe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruc_bombe" />

    <TextView
        android:id="@+id/instructGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruc_but" />
</LinearLayout>